--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,9 @@ AllCops:
 
 Style/FrozenStringLiteralComment:
   Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+Style/ClassAndModuleChildren:
+  Enabled: false
